--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,34 @@
 version: '2.0'
 
 services:
-  api:
-    container_name: api
+  backend:
+    container_name: backend
     build:
       context: .
-      dockerfile: ./docker/Dockerfile-api
+      dockerfile: ./plutolio-backend/Dockerfile
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - ./:/usr/src/app/
+      - ./plutolio-backend:/usr/src/app/
     ports:
       - 8000:8000
     env_file:
-      - ./.env.dev
+      - ./plutolio-backend/.env.dev
   db:
     container_name: db
     image: postgres:12.0-alpine
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - ./plutolio-backend/postgres_data:/var/lib/postgresql/data/
     environment:
       - POSTGRES_USER=django_user
       - POSTGRES_PASSWORD=django_pass258
       - POSTGRES_DB=django_db
-  vue:
-    container_name: vue
+  frontend:
+    container_name: frontend
     build:
       context: .
-      dockerfile: ./docker/Dockerfile-vue
+      dockerfile: ./plutolio-frontend/Dockerfile
     volumes:
-      - ./frontend:/app
+      - ./plutolio-frontend:/app
       - /app/node_modules
     ports:
       - 8001:8080
