--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,19 @@ services:
     container_name: backend
     build:
       context: .
-      dockerfile: ./plutolio-backend/Dockerfile
+      dockerfile: ./backend/Dockerfile
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - ./plutolio-backend:/usr/src/app/
+      - ./backend:/usr/src/app/
     ports:
       - 8000:8000
     env_file:
-      - ./plutolio-backend/.env.dev
+      - ./backend/.env.dev
   db:
     container_name: db
     image: postgres:12.0-alpine
     volumes:
-      - ./plutolio-backend/postgres_data:/var/lib/postgresql/data/
+      - ./backend/postgres_data:/var/lib/postgresql/data/
     environment:
       - POSTGRES_USER=django_user
       - POSTGRES_PASSWORD=django_pass258
@@ -26,9 +26,9 @@ services:
     container_name: frontend
     build:
       context: .
-      dockerfile: ./plutolio-frontend/Dockerfile
+      dockerfile: ./frontend/Dockerfile
     volumes:
-      - ./plutolio-frontend:/app
+      - ./frontend:/app
       - /app/node_modules
     ports:
       - 8001:8080
