--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,14 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "material-design-icons-iconfont": "^5.0.1",
+    "material-icons": "^0.3.1",
     "vue": "^2.6.11",
+    "vue-router": "^3.1.6",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
+    "@mdi/font": "^5.1.45",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
